# shell

./: .envrc  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHATBOT_INTEGRATION.md  CLAUDE.md  CMakeLists.txt  DASHBOARD_ANIMATIONS_MVP.md  DYNAMIC_COLOR_SYSTEM.md  GEMINI.md  INSTALL.md  NOTIFICATION_SETUP.md  QUICK_START_GUIDE.md  README.md  SHORTCUT.md  TODO.md  ULTRAWIDE_FIXES.md  default.nix  dev.html  flake.nix  go.mod  install-system.sh  main.go  module.nix  otro.css  run.sh  shell  shell.json  shell.qml  tui.go
.github/: CONTRIBUTING.md
assets/: battery-monitor.py  beat_detector.cpp  face-selector.py  kb_brief_detector.cpp  settings-index.json  wrap_term_launch.sh
cmake/: qml-module.cmake  qs-qml-module.cmake  qt-setup.cmake
components/: AGENTS.md  BongoCat.qml  DashboardState.qml  DrawerVisibilities.qml  Logo.qml  StyledRadioButton.qml
config/: AiConfig.qml  Appearance.qml  BackgroundConfig.qml  BarConfig.qml  BorderConfig.qml  Config.qml  DashboardConfig.qml  GeneralConfig.qml  LauncherConfig.qml  LockConfig.qml  NotifsConfig.qml  OsdConfig.qml  ServiceConfig.qml  SessionConfig.qml  SidebarConfig.qml  UserPaths.qml  UtilitiesConfig.qml
dock/: Background.qml  Content.qml  Dock.qml  DockAppButton.qml  DockApps.qml  DockButton.qml  DockContent.qml  DockSeperator.qml  Wrapper.qml
modules/: AGENTS.md  AudioDeviceMonitor.qml  BatteryMonitor.qml  IdleMonitors.qml  MonitorIdentifier.qml  Shortcuts.qml  UsbToast.qml
nix/: app2unit.nix  default.nix  hm-module.nix
plugin/: AGENTS.md
plugin/src/Caelestia/: CMakeLists.txt  appdb.cpp  appdb.hpp  cavaprovider.cpp  cavaprovider.hpp  cutils.cpp  cutils.hpp  plugin.cpp  service.cpp  service.hpp  serviceref.cpp  translationloader.cpp  translationloader.hpp
plugin/src/Caelestia/Blobs/: CMakeLists.txt
plugin/src/Caelestia/Blobs/shaders/: blob.frag
plugin/src/Caelestia/Components/: CMakeLists.txt
plugin/src/Caelestia/Config/: CMakeLists.txt  barconfig.hpp  borderconfig.hpp  config.cpp  configobject.cpp  configobject.hpp  dashboardconfig.hpp  generalconfig.hpp  launcherconfig.hpp  lockconfig.hpp  notifsconfig.hpp  sidebarconfig.hpp  tokens.hpp  userpaths.hpp  utilitiesconfig.hpp
plugin/src/Caelestia/Images/: CMakeLists.txt
plugin/src/Caelestia/Internal/: CMakeLists.txt  cachingimagemanager.cpp  cachingimagemanager.hpp  hyprextras.cpp  hyprextras.hpp  plugin.cpp  translationloader.cpp  translationloader.hpp  videothumbnailer.cpp  videothumbnailer.hpp  visualiserbars.cpp  visualiserbars.hpp
plugin/src/Caelestia/Models/: filesystemmodel.cpp  filesystemmodel.hpp
plugin/src/Caelestia/Services/: CMakeLists.txt  audiocollector.hpp  audioprovider.cpp  audioprovider.hpp  cavaprovider.cpp  cavaprovider.hpp  gpu.cpp  service.hpp  sessionmanager.cpp  sessionmanager.hpp
qml/: CMakeLists.txt
qml/components/: CMakeLists.txt
qml/components/containers/: CMakeLists.txt
qml/components/controls/: CMakeLists.txt  CircularIndicator.qml  CircularProgress.qml  CollapsibleSection.qml  CustomSpinBox.qml  FilledSlider.qml  IconButton.qml  IconTextButton.qml  Menu.qml  SpinBoxRow.qml  SplitButton.qml  SplitButtonRow.qml  StyledInputField.qml  StyledScrollBar.qml  StyledSwitch.qml  StyledTextField.qml  SwitchRow.qml  TextButton.qml  ToggleButton.qml  Tooltip.qml
qml/components/effects/: CMakeLists.txt  InnerBorder.qml
qml/components/filedialog/: CMakeLists.txt  CurrentItem.qml  HeaderBar.qml
qml/components/images/: CMakeLists.txt
qml/components/misc/: CMakeLists.txt
qml/components/widgets/: CMakeLists.txt  ExtraIndicator.qml
qml/config/: CMakeLists.txt
qml/modules/: CMakeLists.txt
qml/modules/areapicker/: CMakeLists.txt
qml/modules/background/: CMakeLists.txt
qml/modules/bar/: CMakeLists.txt
qml/modules/bar/components/: CMakeLists.txt
qml/modules/bar/components/workspaces/: CMakeLists.txt
qml/modules/bar/popouts/: CMakeLists.txt
qml/modules/bar/popouts/kblayout/: CMakeLists.txt
qml/modules/controlcenter/: CMakeLists.txt
qml/modules/controlcenter/appearance/: CMakeLists.txt
qml/modules/controlcenter/appearance/sections/: AnimationsSection.qml  BackgroundSection.qml  BorderSection.qml  CMakeLists.txt  ColorSchemeSection.qml  ColorVariantSection.qml  FontsSection.qml  ScalesSection.qml  ThemeModeSection.qml  TransparencySection.qml
qml/modules/controlcenter/audio/: AudioPane.qml  CMakeLists.txt
qml/modules/controlcenter/bluetooth/: CMakeLists.txt  Details.qml  DeviceList.qml  Settings.qml
qml/modules/controlcenter/components/: CMakeLists.txt  ConnectedButtonGroup.qml  DeviceDetails.qml  DeviceList.qml  ReadonlySlider.qml  SplitPaneWithDetails.qml  WallpaperGrid.qml
qml/modules/controlcenter/dashboard/: CMakeLists.txt  DashboardPane.qml  GeneralSection.qml  PerformanceSection.qml
qml/modules/controlcenter/launcher/: AppSearcher.qml  CMakeLists.txt  LauncherPane.qml  Settings.qml
qml/modules/controlcenter/network/: CMakeLists.txt  EthernetDetails.qml  EthernetList.qml  EthernetPane.qml  EthernetSettings.qml  NetworkSettings.qml  VpnDetails.qml  VpnList.qml  VpnSettings.qml  WirelessPane.qml  WirelessSettings.qml
qml/modules/controlcenter/notifications/: CMakeLists.txt  NotificationsPane.qml
qml/modules/controlcenter/state/: CMakeLists.txt
qml/modules/controlcenter/taskbar/: CMakeLists.txt  TaskbarPane.qml
qml/modules/dashboard/: CMakeLists.txt
qml/modules/dashboard/dash/: CMakeLists.txt
qml/modules/drawers/: CMakeLists.txt
qml/modules/launcher/: CMakeLists.txt
qml/modules/launcher/items/: CMakeLists.txt
qml/modules/launcher/services/: Actions.qml  CMakeLists.txt  M3Variants.qml  Schemes.qml
qml/modules/lock/: CMakeLists.txt
qml/modules/notifications/: CMakeLists.txt
qml/modules/osd/: CMakeLists.txt
qml/modules/session/: CMakeLists.txt
qml/modules/sidebar/: CMakeLists.txt
qml/modules/utilities/: CMakeLists.txt
qml/modules/utilities/cards/: CMakeLists.txt
qml/modules/utilities/toasts/: CMakeLists.txt
qml/modules/windowinfo/: CMakeLists.txt
qml/services/: CMakeLists.txt
qml/utils/: CMakeLists.txt
scripts/: build-settings-index.py
services/: AGENTS.md  (+55 more)
(+426 files in other folders)
